--- a/index.html
+++ b/index.html
@@ -21,112 +21,112 @@
   <body>
     <main class="container">
       <div class="image-block">
-          <div class="primary-image">
-            <img
-              src="./images/illustration-woman-online-mobile.svg"
-              alt="illustration of woman working"
-              class="image"
-              width="80%"
-            />
-          </div>
-          <div class="background-image">
-            <img src="./images/bg-pattern-mobile.svg" alt="shadow
+        <img
+          src="./images/illustration-woman-online-mobile.svg"
+          alt="illustration of woman working"
+          class="image"
+        />
+
+        <img
+          src="./images/bg-pattern-mobile.svg"
+          alt="shadow
             pattern under woman working"
-            width="80%" />
-          </div>
+          class="bg-image"
+        />
+      </div>
+
+      <div class="faq">
+        <h1 class="faq-header">FAQ</h1>
+
+        <div class="faq-block">
+          <details>
+            <summary class="question">
+              How many team members can I invite?
+              <span class="arrow">
+                <img src="./images/icon-arrow-down.svg" />
+              </span>
+            </summary>
+            <p class="answer">
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </details>
+          <hr />
         </div>
 
-        <div class="faq">
-          <h1 class="faq-header">FAQ</h1>
-
-          <div class="faq-block">
-            <details>
-              <summary class="question">
-                How many team members can I invite?
-                <span class="arrow">
-                  <img src="./images/icon-arrow-down.svg" />
-                </span>
-              </summary>
-              <p class="answer">
-                You can invite up to 2 additional users on the Free plan. There
-                is no limit on team members for the Premium plan.
-              </p>
-            </details>
-            <hr />
-          </div> 
-
-          <div class="faq-block">
-            <details open>
-              <summary class="question">
-                What is the maximum file upload size?
-                <span class="arrow">
-                  <img src="./images/icon-arrow-down.svg" />
-                </span>
-              </summary>
-              <div class="answer">
-                No more than 2GB. All files in your account must fit your
-                allotted storage space.
-              </div>
-            </details>
-            <hr />
-          </div>
-        
-          <div class="faq-block">
-            <details>
-              <summary class="question">
-                How do I reset my password?
-                <span class="arrow">
-                  <img src="./images/icon-arrow-down.svg" />
-                </span>
-              </summary>
-              <div class="answer">
-                Click “Forgot password” from the login page or “Change password”
-                from your profile page. A reset link will be emailed to you.
-              </div>
-            </details>
-            <hr />
-          </div>
-
-          <div class="faq-block">
-            <details>
-              <summary class="question">
-                Can I cancel my subscription?
-                <span class="arrow">
-                  <img src="./images/icon-arrow-down.svg" />
-                </span>
-              </summary>
-              <div class="answer">
-                Yes! Send us a message and we’ll process your request no
-                questions asked.
-              </div>
-            </details>
-            <hr />
-          </div>
-
-          <div class="faq-block">
-            <details>
-              <summary class="question">
-                Do you provide additional support?
-                <span class="arrow">
-                  <img src="./images/icon-arrow-down.svg" />
-                </span>
-              </summary>
-              <div class="answer">
-                Chat and email support is available 24/7. Phone lines are open
-                during normal business hours.
-              </div>
-            </details>
-            <hr />
-          </div>
+        <div class="faq-block">
+          <details open>
+            <summary class="question">
+              What is the maximum file upload size?
+              <span class="arrow">
+                <img src="./images/icon-arrow-down.svg" />
+              </span>
+            </summary>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </details>
+          <hr />
         </div>
-      </main>
+
+        <div class="faq-block">
+          <details>
+            <summary class="question">
+              How do I reset my password?
+              <span class="arrow">
+                <img src="./images/icon-arrow-down.svg" />
+              </span>
+            </summary>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </details>
+          <hr />
+        </div>
+
+        <div class="faq-block">
+          <details>
+            <summary class="question">
+              Can I cancel my subscription?
+              <span class="arrow">
+                <img src="./images/icon-arrow-down.svg" />
+              </span>
+            </summary>
+            <p class="answer">
+              Yes! Send us a message and we'll process your request no questions
+              asked.
+            </p>
+          </details>
+          <hr />
+        </div>
+
+        <div class="faq-block">
+          <details>
+            <summary class="question">
+              Do you provide additional support?
+              <span class="arrow">
+                <img src="./images/icon-arrow-down.svg" />
+              </span>
+            </summary>
+            <p class="answer">
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
+            </p>
+          </details>
+          <hr />
+        </div>
+      </div>
+    </main>
 
     <footer>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Kimball Sumney</a>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Kimball Sumney</a>
+      </div>
     </footer>
   </body>
 </html>
