--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         <picture>
           <source media="(min-width: 375)"
           srcset-"./images/bg-pattern-mobile.svg" > <source media="(min-width:
-          850)" srcset-"./images/bg-pattern-desktop.svg" ><img
+          850)" srcset-"./images/bg-pattern-desktop.svg" >
+          <img
             src="./images/bg-pattern-mobile.svg"
-            alt="shadow
-            pattern under woman working"
+            alt="shadow pattern"
             class="bg-image"
-        /></picture>
+          />
+        </picture>
       </div>
 
       <div class="faq">
@@ -52,7 +53,10 @@
             <summary class="question">
               How many team members can I invite?
               <span class="arrow">
-                <img src="./images/icon-arrow-down.svg" />
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow pointing down or up"
+                />
               </span>
             </summary>
             <p class="answer">
@@ -68,7 +72,10 @@
             <summary class="question">
               What is the maximum file upload size?
               <span class="arrow">
-                <img src="./images/icon-arrow-down.svg" />
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow pointing down or up"
+                />
               </span>
             </summary>
             <p class="answer">
@@ -84,7 +91,10 @@
             <summary class="question">
               How do I reset my password?
               <span class="arrow">
-                <img src="./images/icon-arrow-down.svg" />
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow pointing down or up"
+                />
               </span>
             </summary>
             <p class="answer">
@@ -100,7 +110,10 @@
             <summary class="question">
               Can I cancel my subscription?
               <span class="arrow">
-                <img src="./images/icon-arrow-down.svg" />
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow pointing down or up"
+                />
               </span>
             </summary>
             <p class="answer">
@@ -116,7 +129,10 @@
             <summary class="question">
               Do you provide additional support?
               <span class="arrow">
-                <img src="./images/icon-arrow-down.svg" />
+                <img
+                  src="./images/icon-arrow-down.svg"
+                  alt="arrow pointing down or up"
+                />
               </span>
             </summary>
             <p class="answer">
