--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     <main class="container">
       <div class="image-block">
         <picture>
-          <source media="(min-width: 375)"
-          srcset-"./images/illustration-woman-online-mobile.svg" > <source
-          media="(min-width: 850)"
-          srcset-"./images/illustration-woman-online-desktop.svg" >
+          <source
+            media="(min-width: 53.125rem)"
+            srcset="./images/illustration-woman-online-mobile.svg"
+          />
+          <source
+            media="(min-width: 23.475rem)"
+            srcset="./images/illustration-woman-online-desktop.svg"
+          />
           <img
             src="./images/illustration-woman-online-mobile.svg"
             alt="illustration of woman working"
@@ -34,9 +38,14 @@
         </picture>
 
         <picture>
-          <source media="(min-width: 375)"
-          srcset-"./images/bg-pattern-mobile.svg" > <source media="(min-width:
-          850)" srcset-"./images/bg-pattern-desktop.svg" >
+          <source
+            media="(min-width: 53.125rem)"
+            srcset="./images/bg-pattern-mobile.svg"
+          />
+          <source
+            media="(min-width: 23.475rem)"
+            srcset="./images/bg-pattern-desktop.svg"
+          />
           <img
             src="./images/bg-pattern-mobile.svg"
             alt="shadow pattern"
